--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -10,16 +10,21 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        # build and publish in parallel: linux/386, linux/amd64, 
-        # windows/386, windows/amd64, darwin/386, darwin/amd64 
         goos: [linux, windows, darwin]
-        goarch: ["386", amd64]
+        goarch: ["386", amd64, arm64]
+        exclude:  
+          - goarch: "386"
+            goos: darwin 
+          - goarch: arm64
+            goos: windows 
     steps:
     - uses: actions/checkout@v2
-    - uses: wangyoucao577/go-release-action@master
+    - uses: wangyoucao577/go-release-action@v1.22
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         goos: ${{ matrix.goos }}
         goarch: ${{ matrix.goarch }}
+        goversion: "https://go.dev/dl/go1.17.6.darwin-amd64.pkg"
+        project_path: "./cmd/test-binary"
         binary_name: "clockify-cli"
         extra_files: README.md
