--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -24,7 +24,6 @@ jobs:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         goos: ${{ matrix.goos }}
         goarch: ${{ matrix.goarch }}
-        goversion: "https://go.dev/dl/go1.17.6.darwin-amd64.pkg"
-        project_path: "./cmd/test-binary"
+        goversion: 1.17 
         binary_name: "clockify-cli"
         extra_files: README.md
